--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -1,12 +1,9 @@
 <div class="myname">
-  <h2><%= "#{@nickname}さんのプロフィール"%><h2>
+  <h2><%= "#{@user.nickname}さんのプロフィール"%><h2>
 </div>
-  <% if @mypage.present?%>
-    <%= link_to "プロフィール編集",edit_mypage_path %>
-  <% else %>
-    <%= link_to "プロフィール作成",new_mypage_path %>
-  <% end %>
-
+<% if @user.id == current_user.id %>
+  <%= link_to "プロフィール編集",edit_mypage_path %>
+<% end %>
 </div class="myprof">
   <div class="residence">
     <p>住んでる場所<p>
