--- a/app/assets/stylesheets/new.css
+++ b/app/assets/stylesheets/new.css
@@ -33,7 +33,7 @@ textarea{
   height: 200px;
 }
 
-input[type="submit"]{
+.game_record{
   background-color: #57c3e9;
 }
 
@@ -49,7 +49,7 @@ a{
   color: black;
 }
 
-.game_record{
+.game_record,.game_title{
   margin-top: 20px;
   width: 100%;
   height: 50px;
