--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -1,10 +1,10 @@
-.game_result{
+.game_result {
   font-size: 30px;
   text-align: center;
   padding-top: 30px;
 }
 
-.edit-article,.return-top{
+.edit-article,.return-top {
   border: 2px solid #57e963;
   color: #57e963;
   padding: 5px;
@@ -16,49 +16,49 @@
   border: 2px solid #e45454;
 }
 
-.sub_title{
+.sub_title {
   margin-top: 40px;
   text-align: center;
   font-size: 30px;
   background-color: #CCCC;
 }
 
-.texts{
+.texts {
   margin: 50px 0 0 50px;
   font-size: 20px;
   line-height: 2.5em;
 }
 
-.image{
+.image {
   margin-top: 120px;
   text-align: center;
   /* box-shadow: 0 0 10px rgba(41,41,41,0.2); */
   border-bottom: solid 2px rgb(221, 215, 203);
+  position: relative;
 }
 
-a:hover{
+a:hover {
   opacity: 0.5;
 }
 
-input{
+input {
   width: 100%;
   text-align: center;
 }
 
-.comment_container{
+.comment_container {
   margin: 0 auto;
   padding: 30px;
   width: 50%;
   background-color: #CCFFFF;
 }
 
-.comment_at{
+.comment_at {
   color: #33CC99;
   margin-bottom: 20px;
 }
 
-.comment_delete_button
-{
+.comment_delete_button {
   display: inline-block;
   padding: 0.1em 0.5em;
   text-decoration: none;
@@ -70,6 +70,26 @@ input{
   margin-top: 10px;
 }
 
-.comment_delete_button:hover{
+.comment_delete_button:hover {
   background: #fffbef;
+}
+
+.good {
+  background-color: #0aaee0;
+  width: 7%;
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+
+.good-after {
+  background-color: #FF66FF;
+  width: 7%;
+  position: absolute;
+  bottom: 0;
+  right: 20px;
+}
+
+.good:hover + .fukidashi {
+  display: block;
 }
