--- a/app/views/tweets/search.html.erb
+++ b/app/views/tweets/search.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "記事一覧へ戻る",tweets_path %>
 <%= form_with(url: search_tweets_path, local: true, method: :get, class: "search-form") do |form| %>
   <%= form.text_field :keyword, placeholder: "記事を検索する", class: "search-input" %>
-  <%= form.submit "検索", class: "search-btn" %>
+  <%= form.submit "検索",class: "game_record" %>
 <% end %>
 <% @tweets.each do |tweet|%>
 <div class="comment">
