--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -19,6 +19,6 @@
   <%= link_to "投稿した戦力分析","#{@mypage.id}/my_analyses" %>
   <%= link_to "投稿した試合予想","#{@mypage.id}/my_forecasts" %>
 </div>
-<%= render "follow_form" %>
-<%= render "stats" %>
+<%= render "users/follow_form" %>
+<%= render "users/stats" %>
   
