--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,5 @@
 <%= form_for(current_user.following_relationships.find_by(following_id: @user.id), html: { method: :delete }) do |f| %>
-  <%= f.submit "フォローを外す", class: "btn btn-large follow-btn" %>
+  <div class="unfollow-user">
+    <%= f.submit "フォローを外す",class: "unfollow-btn" %>
+  </div>
 <% end %>
