--- a/app/views/mypages/show.html.erb
+++ b/app/views/mypages/show.html.erb
@@ -3,25 +3,29 @@
   <h2><%= "#{@user.nickname}さんのプロフィール"%><h2>
 </div>
 <%= render "users/stats" %>
-<% if @user.id == current_user.id %>
+<% if @user.id == current_user.id  && @mypage.blank? %>
+  <%= link_to "プロフィール作成",new_mypage_path %>
+<% elsif @user.id == current_user.id %>
   <%= link_to "プロフィール編集",edit_mypage_path %>
 <% end %>
 </div class="myprof">
-  <div class="residence">
-    <p>住んでる場所<p>
-    <br>
-    <%= @mypage.prefectures %>
-  </div>
-  <div class="text-myname">
-    <p>自己紹介</p>
-    <br>
-      <%=@mypage.text %>
-  </div>
-  <div class="my-links">
-    <%= link_to "投稿した試合記事","#{@mypage.id}/my_tweets",class: "my-link" %>
-    <%= link_to "投稿した戦力分析","#{@mypage.id}/my_analyses",class: "my-link" %>
-    <%= link_to "投稿した試合予想","#{@mypage.id}/my_forecasts",class: "my-link" %>
-  </div>
+  <% @mypages.each do |mypage| %>
+    <div class="residence">
+      <p>住んでる場所<p>
+      <br>
+      <%=mypage.prefectures %>
+    </div>
+    <div class="text-myname">
+      <p>自己紹介</p>
+      <br>
+      <%=mypage.text %>
+    </div>
+    <div class="my-links">
+      <%= link_to "投稿した試合記事","#{mypage.user_id}/my_tweets",class: "my-link" %>
+      <%= link_to "投稿した戦力分析","#{mypage.user_id}/my_analyses",class: "my-link" %>
+      <%= link_to "投稿した試合予想","#{mypage.user_id}/my_forecasts",class: "my-link" %>
+    </div>
+  <%end%>
 </div>
 <%= render "users/follow_form" %>
   
