通知　リンク

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <i class="fa fa-circle" style="color: gold;"></i>
     <% end %>
     <li>
-    <%# <%= link_to "NOTICE", users_notifications_path, class: "btn-default" %> %>
+    <%= link_to "NOTICE", notifications_path, class: "btn-default" %>
 </li>
   </head>
   <body>
