--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -2,7 +2,7 @@
 <% tweet = notification.tweet %>
 
 <div class="user-view clearfix ">
-  <%= link_to users_user_path(notification.visiter) do %>
+  <%= link_to users_path(notification.visiter) do %>
   <% end %>
   <%= notification_form(notification) %><span class="moderate-font"><%= " (#{time_ago_in_words(notification.created_at)} 前)" %></span>
   <br>
