--- a/app/views/contacts/check.html.erb
+++ b/app/views/contacts/check.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @contact, :url => done_path do |f| %>
+<%= form_for @contact, url: done_contacts_path do |f| %>
   <div>
     <h2>内容確認</h2>
     <div>
