--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -33,7 +33,8 @@
     <%= simple_format(analysis.text)%>
   </div>
   <div class="name_ays">
-    <%= link_to "投稿者 #{analysis.user.nickname}","mypages/#{analysis.user_id}"%>
+    <span>投稿者</span>
+    <%= analysis.user.nickname %>
   </div>
   <% if user_signed_in? && current_user.id == analysis.user_id%>
     <%= link_to "削除","/analyses/#{analysis.id}/",method: :delete,data: { confirm: '削除しますか？' },class: "ays_delete" %>
