--- a/app/views/forecasts/_show.html.erb
+++ b/app/views/forecasts/_show.html.erb
@@ -20,7 +20,8 @@
       <%= link_to "編集","/forecasts/#{forecast.id}/edit",method: :get,class: "fcs_edit" %>
     <% end %>
     <div class="name_ays">
-      <%= link_to "投稿者 #{forecast.user.nickname}","mypages/#{forecast.user_id}"%>
+      <span>投稿者</span>
+      <%= forecast.user.nickname %>
     </div>
   </div>
  <% end %>
