--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,14 +1,14 @@
 <div class="user-in">
 <% @entries.each do |e| %>
-    <h3><strong><a href="/users/<%= e.user.id %>"><%= e.user.email%></a></strong></h3>
+    <h3><%= link_to "#{e.user.nickname}","/mypages/#{e.user_id}"%></h3>
 <% end %>
-<p>2人のDM❤️</p>
+<p>ダイレクトメッセージ</p>
 </div>
 
 <div class="dmMain">
     <% @messages.each do |m| %>
         <strong><%= m.body %></strong>
-        <small><%= m.user.email %>さん</small><hr>
+        <p><%= m.user.nickname %></p><hr>
     <% end %>
 
     <%= form_for @message do |f| %>
@@ -18,3 +18,4 @@
     <%= f.submit "送信する" %>
     <% end %>
 </div>
+<%= link_to "戻る",:back%>
