--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -1,7 +1,7 @@
 <% @analyses.each do |analysis|%>
   <div class="content_anali">
     <div class="school">
-      <%= analysis.school.name %>
+      <%= link_to "#{analysis.school.name}","/analyses/#{analysis.id}" %>
     </div>
     <div class="select_main">
       <div class="attack_i">
@@ -9,7 +9,7 @@
         <%= analysis.attack%>
       </div>
       <div class="defensive_i">
-        <p>防御力</p>
+        <p>守備力</p>
         <%= analysis.defensive%>
       </div>
       <div class="pitcher_i">
