--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -4,6 +4,7 @@
 <%= link_to "試合予想",forecasts_path%>
 <% if user_signed_in? %>
   <%= link_to "マイページ","/mypages/#{current_user.id}"%>
+  <%= link_to "お問い合わせ",contacts_path %>
 <% elsif user_signed_in? && current_user.admin? %>
   <%= link_to "管理者ページ", users_show_admin_users_path %>
 <% end %>
