--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -55,7 +55,7 @@
     <div class="comment_container"> 
     <!-- ここからフォーム -->
     <% if current_user %>
-      <%= form_tag("/tweets/#{@tweet.id}/comments", method: :post) do %>
+      <%= form_with(model:[@tweets, @comment], method: :post) do |f| %>
         <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
         <input type="submit" value="SENT" class="game_record">
       <% end %>
