--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -49,7 +49,7 @@
             <strong><%= comment.user.nickname %>：</strong>
               <%= simple_format(comment.text) %>
               <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
-                <%= link_to '削除', "/tweets/#{@tweet.id}/comments/#{comment.id}", method: :delete,class: "comment_delete_button" %>
+                <%= link_to '削除', "/analyses/#{@analysis.id}/comment_analyses/#{comment.id}", method: :delete,class: "comment_delete_button" %>
               <% end %>
               <div class="comment_at">
               <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
@@ -61,7 +61,7 @@
     <div class="comment_container"> 
     <!-- ここからフォーム -->
     <% if current_user %>
-      <%= form_with(model:[@tweets, @comment], method: :post) do |f| %>
+      <%= form_with(model:[@analysis, @comment], method: :post) do |f| %>
         <textarea cols="30" name="text" placeholder="コメントを記述" rows="2"></textarea>
         <input type="submit" value="SENT" class="game_record">
       <% end %>
