--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -38,7 +38,7 @@
         <% end %>
       </div>
     </div>
-  <div class="text-ays_show">
+  <div class="text-show">
     <%= simple_format(@analysis.text)%>
   </div>
       <div class="comments">   
