--- a/app/views/forecasts/_show.html.erb
+++ b/app/views/forecasts/_show.html.erb
@@ -4,7 +4,7 @@
       <div class="win_school">
         <p>勝利予想<p>
         <br>
-        <%= forecast.win_school.name%>
+        <%= link_to "#{forecast.win_school.name}","/forecasts/#{forecast.id}"%>
       </div>
       <div class="lose_school">
         <p>敗退予想<p>
