--- a/app/views/forecasts/_show.html.erb
+++ b/app/views/forecasts/_show.html.erb
@@ -1,5 +1,5 @@
 <%  @forecasts.each do |forecast|%>
-  <%= link_to forecast,class: "fcs_link" do %>
+  <%= link_to forecast do %>
   <div class="content_anali">
     <div class="school_fcs">
       <div class="win_school">
