--- a/app/views/forecasts/show.html.erb
+++ b/app/views/forecasts/show.html.erb
@@ -34,7 +34,7 @@
             <strong><%= comment.user.nickname %>：</strong>
               <%= simple_format(comment.text) %>
               <% if user_signed_in? && current_user.id == comment.user_id || current_user.admin %>
-                <%= link_to '削除', "/analyses/#{@forecast.id}/comment_forecasts/#{comment.id}", method: :delete,class: "comment_delete_button" %>
+                <%= link_to '削除', "/forecasts/#{@forecast.id}/comment_forecasts/#{comment.id}", method: :delete,class: "comment_delete_button" %>
               <% end %>
               <div class="comment_at">
               <%= comment.created_at.strftime("%Y年%m月%d日 %H時%M分")%>
