分析削除権限

--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -37,7 +37,7 @@
     <span>投稿者</span>
     <%= analysis.user.nickname %>
   </div>
-  <% if user_signed_in? && current_user.id == analysis.user_id%>
+  <% if user_signed_in? && analysis.user_id == current_user.id || current_user.admin %>
     <%= link_to "削除","/analyses/#{analysis.id}/",method: :delete,data: { confirm: '削除しますか？' },class: "ays_delete" %>
     <%= link_to "編集","/analyses/#{analysis.id}/edit",method: :get, class: "ays_edit"%>
   <% end %>
