クラス名変更

--- a/app/views/analyses/_show.html.erb
+++ b/app/views/analyses/_show.html.erb
@@ -1,7 +1,7 @@
 <% @analyses.each do |analysis|%>
   <%= link_to analysis do%>
   <div class="content_anali">
-    <div class="school">
+    <div class="school_ays">
       <%= analysis.school.name %>
     </div>
     <div class="select_main">
