--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,17 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+ @import "bootstrap";
+ @import "./analyses";
+ @import "./style";
+ @import "./devise";
+ @import "./forecast";
+ @import "./mypage";
+ @import "./new";
+ @import "./resert";
+ @import "./room";
+ @import "./show";
+ @import "./top";
+
+
