--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,33 +1,35 @@
-<div id="app">
-  <transition name="bounce" appear>
-    <div v-show="show">
-      <div class="top-header">
-        <%= render partial: "/tweets/log"%>
-        <% if user_signed_in? %>
-          <%= link_to "マイページ","/mypages/#{current_user.id}"%>
-          <%= link_to "お問い合わせ",contacts_path %>
-        <% elsif user_signed_in? && current_user.admin? %>
-          <%= link_to "管理者ページ", users_show_admin_users_path %>
-        <% end %>
-      </div>
-      <div class="top-container">
-        <div class="menu_select">
-          <li>
-          <%= link_to tweets_path,class: "btn btn-info btn-lg" do %>
-            <span class="glyphicon glyphicon-pencil"></span>試合記事
-          <% end %>
-          </li>
-          <li>
-          <%= link_to analyses_path,class: "btn btn-success btn-lg" do %>
-            <span class="glyphicon glyphicon-search"></span>戦力分析
-          <% end %>
-          <li>
-          <%= link_to forecasts_path,class: "btn btn-danger btn-lg" do %>
-            <span class="glyphicon glyphicon-fire"></span>試合予想
-          <% end %>
+<div class="top-main">
+  <div id="app">
+        <div v-show="show">
+          <div class="top-header">
+            <%= render partial: "/tweets/log"%>
+            <% if user_signed_in? %>
+              <%= link_to "マイページ","/mypages/#{current_user.id}"%>
+              <%= link_to "お問い合わせ",contacts_path %>
+            <% elsif user_signed_in? && current_user.admin? %>
+              <%= link_to "管理者ページ", users_show_admin_users_path %>
+            <% end %>
+          </div>
+          <transition name="bounce" appear>
+          <div class="top-container">
+            <div class="mx-auto" style="width: 40%;">
+              <li>
+              <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
+                <span class="glyphicon glyphicon-pencil"></span>試合記事
+              <% end %>
+              </li>
+              <li>
+              <%= link_to analyses_path,class: "btn btn-green-moon" do %>
+                <span class="glyphicon glyphicon-search"></span>戦力分析
+              <% end %>
+              </li>
+              <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
+                <span class="glyphicon glyphicon-fire"></span>試合予想
+              <% end %>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
-  </transition>
+        </transition>
+  </div>
 </div>
 <%= javascript_pack_tag 'top' %>
