--- a/app/assets/stylesheets/resert.scss
+++ b/app/assets/stylesheets/resert.scss
@@ -33,7 +33,13 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	height: 100%;
 }
+
+html{
+	height: 100%;
+}
+
 ol, ul {
 	list-style: none;
 }
