ヘッダー　新着通知

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -19,6 +19,7 @@
 .top-header {
   height: 8%;
   position: relative;
+  justify-content: space-between;
   &_menu {
     display: flex;
     position: absolute;
@@ -26,8 +27,11 @@
   }
 }
 
-.mypage {
-  margin-right: 70px;
+.new_info {
+  top: 10px;
+  left: 17px;
+  font-size: 13px;
+  position: absolute;
 }
 
 .mx-auto {
