--- a/app/views/tweets/_header.html.erb
+++ b/app/views/tweets/_header.html.erb
@@ -1,5 +1,15 @@
 <div class="top-header d-flex align-items-center">
-  <div class="top-header_menu">
+  <% if user_signed_in? %>
+    <%= link_to notifications_path, class: "btn-default" do %>
+      <i class="fa fa-bell"></i>新着通知
+    <% end %>
+    <% if unchecked_notifications.any? %>
+      <%= link_to notifications_path, class: "new_info" do %>
+        <i class="fa fa-circle fa-xs" style="color: gold;"></i>新着あり
+      <% end %>
+    <% end %>
+  <% end %>
+  <%# <div class="top-header_menu"> %>
     <% if user_signed_in? %>
       <%= link_to "/mypages/#{current_user.id}",class: "mypage" do %>
         <i class="fa fa-user"></i>マイページ
@@ -10,8 +20,8 @@
     <% elsif user_signed_in? && current_user.admin? %>
       <%= link_to "管理者ページ", users_show_admin_users_path %>
     <% end %>
-  </div>
-  <div class="log">
+  <%# </div> %>
+  <%# <div class="log"> %>
     <% if user_signed_in? %>
       <%= link_to destroy_user_session_path,method: :delete do %>
         <i class="fa fa-sign-out-alt"></i>ログアウト
@@ -27,5 +37,4 @@
     <% unless current_page?(root_path)%>
       <%= link_to "トップページへ戻る",root_path,class: "return-top"%>
     <%end%>
-  </div>
 </div>
