--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -16,15 +16,37 @@
   }
 }
 
+.top-title {
+  text-align: center;
+  color: white;
+  font-size: 70px;
+  font-family: "ＭＳ ゴシック",sans-serif;
+  text-shadow:4px 4px 0 #00CCFF, -4px -4px 0 #00CCFF,
+  -4px 4px 0 #00CCFF, 4px -4px 0 #00CCFF,
+  0px 1px 0 #FFF,  0-1px 0 #FFF,
+  -1px 0 0 #FFF, 1px 0 0 #FFF;
+}
+
+.top-main {
+  background-size: cover;
+  background-position: center center;
+  background-image: image-url('f3060916f2bea25d52898539c7d62f27_s-e1552638207137.jpg');
+}
+
 .top-header {
   height: 8%;
   position: relative;
+  background-color: #003366;
   justify-content: space-between;
-  &_menu {
-    display: flex;
-    position: absolute;
-    right: 240px;
-  }
+}
+
+.info,.mypage,.contact,.logout,.login,.top_sign_up {
+  color: rgba(29,161,242,1.00);;
+}
+
+.top_sign_up {
+  position: absolute;
+  left: 110px;
 }
 
 .new_info {
@@ -36,7 +58,7 @@
 
 .mx-auto {
   list-style: none;
-  margin-top: 190px;
+  margin-top: 400px;
 }
 
 .btn-cool-blues {
@@ -44,8 +66,6 @@
   background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0);
   background: linear-gradient(to right, #6dd5ed, #2193b0);
   color: #fff;
-  line-height: 60px;
-  font-size: 30px;
 }
 
 .btn-green-moon {
@@ -53,8 +73,6 @@
   background: -webkit-linear-gradient(to right, #a8e063, #56ab2f);
   background: linear-gradient(to right, #a8e063, #56ab2f);
   color: #fff;
-  line-height: 60px;
-  font-size: 30px;
 }
 
 .btn-orange-moon {
@@ -62,6 +80,33 @@
   background: -webkit-linear-gradient(to right, #f7b733, #fc4a1a);
   background: linear-gradient(to right, #f7b733, #fc4a1a);
   color: #fff;
+}
+
+.btn-cool-blues,.btn-green-moon,.btn-orange-moon {
   line-height: 60px;
   font-size: 30px;
+  z-index: 1;
+  position: relative;
+}
+
+.top-image {
+  // position: absolute;
+  &_one {
+    top: 450px;
+    left: 0;
+    position: absolute;
+    z-index: 0;
+  }
+  &_two {
+    top: 450px;
+    left: 1100px;
+    position: absolute;
+    z-index: 0;
+  }
+  &_three {
+    top: 120px;
+    left: 500px;
+    position: absolute;
+    z-index: 0;
+  }
 }
