--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,23 +1,35 @@
-<div class="top-main h-100">
+<div class="top-main">
     <%= render partial: "/tweets/header"%>
   <div id="app">
     <transition name="bounce" appear>
     <div v-show="show">
       <div class="top-container">
         <div class="mx-auto" style="width: 40%;">
+        <div class="top-title font-weight-bold">
+          甲子園
+        </div>
           <li>
           <%= link_to tweets_path,class: "btn btn-cool-blues" do %>
-            <span class="glyphicon glyphicon-pencil"></span>試合記事
+            <i class="fas fa-edit"></i>試合記事
           <% end %>
           </li>
           <li>
           <%= link_to analyses_path,class: "btn btn-green-moon" do %>
-            <span class="glyphicon glyphicon-search"></span>戦力分析
+            <i class="fas fa-search"></i>戦力分析
           <% end %>
           </li>
           <%= link_to forecasts_path,class: "btn btn-orange-moon" do %>
-            <span class="glyphicon glyphicon-fire"></span>試合予想
+            <i class="fas fa-baseball-ball"></i>試合予想
           <% end %>
+        </div>
+        <div class="top-image_one">
+          <%= image_tag "defense.png",width: '400',height: '300' %>
+        </div>
+        <div class="top-image_two">
+          <%= image_tag "s-20140422202730101600.png",width: '300',height: '300' %>
+        </div>
+        <div class="top-image_three">
+          <%= image_tag "04528d896c142111f9ad8f83522bb05d76dbf17a.png",width: '300',height: '300' %>
         </div>
       </div>
     </div>
