ヘッダー　大きさ

--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -34,7 +34,7 @@
 }
 
 .top-header {
-  height: 8%;
+  height: 70px;
   position: relative;
   background-color: #003366;
   justify-content: space-between;
